2006-03-30  Eric Seidel  <eseidel@apple.com>

        Reviewed by hyatt.

        Fix text form controls, and add basic submit support!

        * bridge/win/FrameWin.cpp:
        (WebCore::FrameWin::submitForm):
        * bridge/win/FrameWin.h:
        * platform/win/KeyEventWin.cpp:
        (WebCore::keyIdentifierForWindowsKeyCode):
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        * platform/win/TemporaryLinkStubs.cpp:
        (FrameWin::incomingReferrer):
        * platform/win/TransferJobWin.cpp:
        (WebCore::TransferJob::start):

2006-03-30  Adele Peterson  <adele@apple.com>

        Reviewed by Justin.

        - Fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=8083
        REGRESSION: Repro crash when dragging to select over a new text field

        * editing/Selection.cpp: (WebCore::Selection::adjustForEditableContent):
        When searching for non-editable content, if the end of the selection is in a 
        shadow tree, then we need to jump out of that first.

2006-03-30  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6989
        REGRESSION: Plain-text mode needed for contenteditable area used in new text field

        * bridge/mac/WebCoreFrameBridge.h:
        * bridge/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge isSelectionEditable]):
        (-[WebCoreFrameBridge isSelectionRichlyEditable]):
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        * css/CSSValueKeywords.in:
        * css/cssparser.cpp:
        (WebCore::CSSParser::parseValue):
        * dom/Node.cpp:
        (WebCore::Node::isContentRichlyEditable):
        * dom/Node.h:
        * editing/EditCommand.cpp:
        (WebCore::EditCommand::apply):
        * editing/JSEditor.cpp:
        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplacementFragment::ReplacementFragment):