@@ -1,0 +1,24 @@
+<html>
+<body onload="test();">
+<script>
+function test()
+{
+    document.getElementById("results").innerHTML = 
+        "<p>Type of Java String object is: " + typeof(document.getElementById('applet').getString());
+}
+</script>
+
+<p>This test verifies that Java String objects are of the correct type when returned to JavaScript.</p>
+
+<p>On success, the Java String object will be of type &quot;object&quot;.<br/>
+On failure, the type will be &quot;function&quot;.<br/>
+See Radar 4212626.</p>
+
+<div id="results">
+</div>
+
+<APPLET id="applet" code="StringTypeTest.class" codebase="resources" width="0" height="0">
+</APPLET>
+
+</body>
+</html>
