@@ -1,0 +1,7 @@
+import java.applet.*;
+
+public class StringTypeTest extends Applet {
+    public String getString() {
+        return new String("hello");
+    }
+}
